fixed a few bad ui design choices (release button also on the desc tab, add/edit buttons left aligned, removed the + button to toggle commenting)

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -43,6 +43,10 @@ a:hover {
 	height: 60px;
 }
 
+.whitetext {
+	color: white;
+}
+
 
 .logo img {
 	width: 280px; 
@@ -755,7 +759,7 @@ input[type="submit"] {
 	display:none;
 }
 .buttonlinks {
-	float:right;
+	display:inline-block;
 }
 
 .comment {
